Fix stepId in OutputSet in DelegateStep and add graph fusion test
Signed-off-by: Ansari, Mujammil <mujammil.ansari@here.com>